Update devshell and home configuration: added new packages (libffi, libyaml) and updated environment variables (CPPFLAGS, LDFLAGS) for improved development setup.

--- a/devshell.toml
+++ b/devshell.toml
@@ -7,6 +7,8 @@ packages = [
   "home-manager",
   "curl",
   "wget",
+  "gnumake", "zlib.dev", "stdenv.cc", "openssl.dev", "libffi.dev", "pkg-config",
+  "libffi", "libyaml"
 ]
 
 packagesFrom = [
