fully nixosified frameling desktop

--- a/desktop/ghostty/ghostty.config
+++ b/desktop/ghostty/ghostty.config
@@ -15,3 +15,9 @@ window-save-state = always
 window-padding-x = 6
 window-padding-y = 6
 window-padding-balance = true
+
+
+keybind = performable:ctrl+c=copy_to_clipboard
+keybind = performable:ctrl+v=paste_from_clipboard
+keybind = performable:ctrl+x=cut_to_clipboard
+keybind = performable:ctrl+a=select_all
