--- a/desktop/ghostty/ghostty.config
+++ b/desktop/ghostty/ghostty.config
@@ -10,7 +10,7 @@ adjust-cell-height = 2%
 mouse-hide-while-typing = true
 mouse-scroll-multiplier = 6
 
-window-save-state = always
+window-save-state = never
 
 window-padding-x = 6
 window-padding-y = 6
@@ -19,3 +19,9 @@ window-padding-balance = true
 
 keybind = performable:ctrl+c=copy_to_clipboard
 keybind = performable:ctrl+v=paste_from_clipboard
+keybind = shift+right=adjust_selection:right
+keybind = shift+left=adjust_selection:left
+keybind = shift+up=adjust_selection:up
+keybind = shift+down=adjust_selection:down
+keybind = shift+home=adjust_selection:home
+keybind = shift+end=adjust_selection:end
