--- a/devshell.toml
+++ b/devshell.toml
@@ -7,8 +7,8 @@ packages = [
   "home-manager",
   "curl",
   "wget",
-  "gnumake", "zlib.dev", "stdenv.cc", "openssl.dev", "libffi.dev", "pkg-config",
-  "libffi", "libyaml"
+  "gnumake", "stdenv.cc", "llvm", "zlib.dev", "openssl.dev", "libffi.dev", "pkg-config",
+  "libffi.dev", "libyaml.dev", "autoconf", "automake", "libtool", "libuuid"
 ]
 
 packagesFrom = [
