more commands setup

--- a/desktop/ghostty/ghostty.config
+++ b/desktop/ghostty/ghostty.config
@@ -16,6 +16,9 @@ window-padding-x = 6
 window-padding-y = 6
 window-padding-balance = true
 
+  gtk-single-instance = false
+  window-decoration = false
+
 
 keybind = performable:ctrl+c=copy_to_clipboard
 keybind = performable:ctrl+v=paste_from_clipboard
