Clean up codebase and pre-commit config
- Remove unused linters (statix, deadnix) from pre-commit hooks
- Pin nixpkgs-fmt to v1.3.0 instead of main branch
- Fix whitespace formatting issues across multiple files
- Add missing newlines at end of files
- Remove duplicate theme option definitions in theme.nix

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/nix-community/nixpkgs-fmt
-    rev: main
+    rev: v1.3.0
     hooks:
       - id: nixpkgs-fmt
         name: Format Nix files
@@ -9,25 +9,3 @@ repos:
         language: system
         files: \.nix$
         exclude: ^.*generated.*$
-
-  - repo: https://github.com/ners/nix
-    rev: main
-    hooks:
-      - id: statix
-        name: Lint Nix files
-        description: Lint Nix code with statix
-        entry: statix check
-        language: system
-        files: \.nix$
-        pass_filenames: false
-
-  - repo: https://github.com/ners/nix
-    rev: main
-    hooks:
-      - id: deadnix
-        name: Find dead code in Nix files
-        description: Find dead code in Nix files with deadnix
-        entry: deadnix
-        language: system
-        files: \.nix$
-        pass_filenames: false
