--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v25
+      - name: Install Nix (GitHub only)
+        uses: cachix/install-nix-action@v25
+        # Skip on Forgejo/act runners where nix is pre-installed
+        if: ${{ !env.ACT }}
         with:
           nix_path: nixpkgs=channel:nixos-unstable
       - name: Check flake
